fixed orientation of the scoreboard to prevent having to deal with saving data between views... i'll look at it later...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         </activity>
         <activity
             android:name="com.example.jwhitmarsh.myapplication.Scoreboard"
-            android:label="@string/title_activity_scoreboard"></activity>
+            android:label="@string/title_activity_scoreboard"
+            android:screenOrientation="portrait">
+            <!--TODO for the time being I have fixed orientation-->
+        </activity>
     </application>
 
 </manifest>
